Try to fix resume image on mobile

--- a/src/app/components/resume/resume.component.scss
+++ b/src/app/components/resume/resume.component.scss
@@ -34,7 +34,7 @@
 		img {
 			max-height: 60vh;
 			max-width: max-content;
-			width: 90vw;
+			// width: 90vw;
 			transform: skew(3deg, 2deg);
 		}
 	}
